# raft-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_cluster.sh
config/: cluster.conf.example
proto/: raft.proto
src/: log_entry.cpp  log_entry.h  main.cpp  persistent_state.cpp  persistent_state.h  raft_node.cpp  raft_node.h  raft_server.cpp  raft_server.h  test_cluster.cpp
